"""BUILD file for examples/external_linking root package."""

load("@rules_python//python:defs.bzl", "py_test")

py_test(
    name = "import_test",
    srcs = ["import_test.py"],
    deps = [
        "@uv//:contourpy",
        "@uv//:filelock",
        "@uv//:numpy",
        "@uv//:pandas",
        "@uv//:psycopg2",
        "@uv//:pyproject_metadata",
        "@uv//:pywavelets",
        "@uv//:rpds_py",
        "@uv//:tomli",
    ],
)
