bazel_dep(name = "llvm", version = "0.8.3")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.18")
bazel_dep(name = "rules_python", version = "2.0.0")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_pycross", version = "0.0.0")
bazel_dep(name = "bazel_lib", version = "3.1.0")
bazel_dep(name = "rules_rust", version = "0.68.0")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    extra_target_triples = [
        "aarch64-apple-darwin",
        "aarch64-unknown-linux-gnu",
    ],
)
use_repo(
    rust,
    "rust_linux_x86_64__x86_64-unknown-linux-gnu__stable_tools",
)

local_path_override(
    module_name = "rules_pycross",
    path = "../..",
)

single_version_override(
    module_name = "llvm",
    patch_strip = 1,
    patches = [
        "//patches:llvm_http_bsdtar_archive_tolerant.patch",
        "//patches:llvm_osx_exclude_cpp_headers.patch",
        "//patches:llvm_llvm_bzl_static_library_validator_darwin_target.patch",
        "//patches:llvm_runtimes_libcxx_headers_alias.patch",  # Force Bzlmod re-patching v8
    ],
    version = "0.8.3",
)

# Third party deps
include("//third_party/boringssl:repositories.MODULE.bazel")
include("//third_party/openblas:repositories.MODULE.bazel")
include("//third_party/openssl:repositories.MODULE.bazel")
include("//third_party/postgresql:repositories.MODULE.bazel")
include("//third_party/zlib:repositories.MODULE.bazel")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.14.2",
)
use_repo(python, "python_versions")

pycross = use_extension("@rules_pycross//pycross/extensions:pycross.bzl", "pycross")
pycross.configure_environments(
    glibc_version = "2.35",
    platforms = [
        "aarch64-apple-darwin",
        "aarch64-unknown-linux-gnu",
        "x86_64-unknown-linux-gnu",
        "x86_64-unknown-linux-musl",
    ],
    python_versions = [
        "3.14.2",
    ],
)

# Workaround for Bazel local_path_override bug: the main repository must be able to
# see the toolchains repo because register_toolchains in rules_pycross is resolved here.
toolchains = use_extension("@rules_pycross//pycross/private/bzlmod:toolchains.bzl", "toolchains")
use_repo(toolchains, "pycross_toolchains")

environments = use_extension("@rules_pycross//pycross/extensions:environments.bzl", "environments")
use_repo(environments, "pycross_environments")

# Use the lock_import extension to import external lock files.
lock_import = use_extension("@rules_pycross//pycross/extensions:lock_import.bzl", "lock_import")

# Configure hermetic macOS SDK for LLVM cross-compilation
osx = use_extension("@llvm//extensions:osx.bzl", "osx")
osx.from_archive(
    sha256 = "5e4d3be6b445f0eacc0333ff2117e93e4433d8c4fe44053a14f735033a98aaa9",
    strip_prefix = "MacOSX14.0.sdk",
    type = "tar.xz",
    urls = [
        "https://github.com/joseluisq/macosx-sdks/releases/download/14.0/MacOSX14.0.sdk.tar.xz",
    ],
)
osx.frameworks(names = [
    "CoreFoundation",
    "Foundation",
])
use_repo(osx, "macos_sdk")

# Import from uv
lock_import.import_uv(
    default_alias_single_version = True,
    lock_file = "//:uv.lock",
    project_file = "//:pyproject.toml",
    repo = "uv",
)
lock_import.package(
    name = "numpy",
    always_build = True,
    build_dependencies = [
        "cython",
        "meson-python",
        "meson",
        "ninja",
    ],
    build_target = "@//deps/numpy",
    repo = "uv",
)
lock_import.meson_override(
    name = "pandas",
    always_build = True,
    build_dependencies = [
        "cython",
        "meson-python",
        "meson",
        "ninja",
        "versioneer",
    ],
    copts = [
        "-D__JETS_DUMMY__=8",
    ],
    linkopts = [
        "-lc++",
        "-lc++abi",
        "-lunwind",
    ],
    native_deps = [
        "//:llvm_static_runtime",
    ],
    repo = "uv",
)
lock_import.package(
    name = "psycopg2",
    build_target = "@//deps/psycopg2",
    repo = "uv",
)
lock_import.package(
    name = "setproctitle",
    always_build = True,
    build_dependencies = [
        "setuptools",
        "wheel",
    ],
    repo = "uv",
)
lock_import.package(
    name = "contourpy",
    always_build = True,
    build_dependencies = [
        "meson-python",
        "meson",
        "ninja",
        "pybind11",
        "numpy",
    ],
    build_target = "@//deps/contourpy",
    repo = "uv",
)
lock_import.package(
    name = "pywavelets",
    always_build = True,
    build_dependencies = [
        "meson-python",
        "meson",
        "ninja",
        "numpy",
        "cython",
    ],
    build_target = "@//deps/pywavelets",
    repo = "uv",
)
lock_import.package(
    name = "rpds-py",
    always_build = True,
    build_dependencies = [
        "maturin",
    ],
    native_deps = [
        "//:llvm_static_runtime",
    ],
    repo = "uv",
)

lock_repos = use_extension("@rules_pycross//pycross/extensions:lock_repos.bzl", "lock_repos")
use_repo(lock_repos, "uv")

register_toolchains("@llvm//toolchain:all")
